--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ html {
 
 body {
   margin: 0;
+  background-color: lightgray;
 }
 
 svg {
@@ -29,11 +30,13 @@ path {
 }
 
 .content {
-  flex-basis: 50%;
+  flex-basis: 40%;
   text-align: center;
+  background-color: white;
+
 }
 .map {
-  flex-basis: 50%;
+  flex-basis: 60%;
 }
 
 .nav-bar {
@@ -47,4 +50,13 @@ path {
 
 .nav-bar span {
   padding-left: 30px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
+  width: 100%;
+  height: 100%;
 }
