--- a/src/App.css
+++ b/src/App.css
@@ -30,13 +30,16 @@ path {
 }
 
 .content {
-  flex-basis: 40%;
+  flex-basis: 35%;
   text-align: center;
   background-color: white;
-
+  flex-shrink: 10
 }
-.map {
-  flex-basis: 60%;
+
+.map-wrapper{
+  flex-shrink: 1;
+  flex-basis: 65%;
+  background-color: lightblue;
 }
 
 .nav-bar {
@@ -59,4 +62,10 @@ path {
   background-color: lightgray;
   width: 100%;
   height: 100%;
+}
+
+.content-img{
+  width: 320px;
+  height: 250px;
+  border-radius: 5px;
 }
