--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@ html {
 body {
   margin: 0;
   background-color: lightgray;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 svg {
@@ -29,16 +31,17 @@ path {
   flex-direction: row;
 }
 
+
 .content {
-  flex-basis: 35%;
   text-align: center;
   background-color: white;
-  flex-shrink: 10
+  padding: 20px;
+
 }
 
 .map-wrapper{
   flex-shrink: 1;
-  flex-basis: 65%;
+  width: 100%;
   background-color: lightblue;
 }
 
@@ -49,6 +52,10 @@ path {
   justify-content: flex-start;
   align-items: center;
   background-color: lightgray;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .nav-bar span {
@@ -60,8 +67,10 @@ path {
   justify-content: center;
   align-items: center;
   background-color: lightgray;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .content-img{
